added Technical indicators

--- a/package.json
+++ b/package.json
@@ -60,7 +60,8 @@
     "tiny-promisify": "^0.1.1",
     "toml": "^2.3.0",
     "twitter": "^1.7.1",
-    "zaif.jp": "^0.1.4"
+    "zaif.jp": "^0.1.4",
+    "technicalindicators": "^1.0.21"
   },
   "devDependencies": {
     "chai": "^2.0.0",
